<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="PFG_Inventory">Inventory System</string>
    <string name="title_activity_login">Inventory System</string>
    <string name="laccount">Account：</string>
    <string name="lpassword">Password：</string>
    <string name="lServerIP">請輸入正確IP</string>
    <string name="action_ok">確定</string>
    <string name="action_cancel">取消</string>
    <string name="action_log_in">登入</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_list">MenuList</string>
    <string name="title_activity_function_list">作業清單</string>
    <string name="title_activity_input">外倉選擇</string>
    <string name="request_progress_waiting">資料載入中...請稍後</string>
    <string name="title_activity_input_location">InputLocation</string>
    <string name="system_download_finish">外倉資料下載完成!</string>
    <string name="progress_download">外倉資料下載中,請稍後…</string>
    <string name="error_download_crash">無法下載外倉資料,請確認網路連線正常。</string>
    <string name="system_dialog_title">系統訊息</string>
    <string name="title_activity_input_location_detail">Inventory System-進貨管理</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_output">Output</string>
    <string name="title_activity_output_location_detail">Inventory System-出貨管理</string>
    <string name="title_activity_change_location">換排作業</string>
    <string name="title_activity_make_inventory">MakeInventory</string>
    <string name="title_activity_make_inventory_d">MakeInventoryD</string>
    <string name="title_activity_make_inventory_location">MakeInventoryLocation</string>

</resources>
