<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:text="@string/lServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"/>

        <EditText
            android:inputType="textNoSuggestions"
            android:id="@+id/edServerIP"
            android:hint="請輸入IP"
            android:layout_width="180sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                android:id="@+id/btn_ServerIPCancel"
                android:background="@drawable/btn_green_no_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                android:id="@+id/btn_ServerIPSave"
                android:background="@drawable/btn_green_no_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_ok"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>