<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fpg.ftc.si.pfg_inventory.Login"
    android:orientation="vertical"
    android:background="@drawable/pfg_bk">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/title"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/laccount"
                android:text="@string/laccount"
                android:textSize="@dimen/text_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:id="@+id/account"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/lpassword"
                android:text="@string/lpassword"
                android:textSize="@dimen/text_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:password="true"
                android:inputType="number"
                android:id="@+id/password"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:textColor="#FFFFFF"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/action_log_in"
        android:background="@drawable/btn_blue_no_corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lCopyRight"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size_medium"
            android:text="Copyright © 2014 FTC. All rights reserved."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/lVer"
            android:textColor="#FF0000"
            android:textSize="@dimen/text_size_medium"
            android:text="Ver 18.01.03"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ldownload"
            android:textSize="@dimen/text_size_medium"
            android:text=""/>
    </LinearLayout>
</LinearLayout>
